--- a/coa_converter_wasm/Cargo.toml
+++ b/coa_converter_wasm/Cargo.toml
@@ -10,6 +10,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-image = "0.24.0"
 coa_converter_lib = {path = "../coa_converter_lib"}
 wasm-bindgen-futures = "0.4.29"
+console_error_panic_hook = "0.1.7"
+
+
+[dependencies.image]
+version = "0.24.0"
+default-features = false
+features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]
